[package]
name = "net_sdk"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]

url = { version = "2.5.8", default-features = false }
wasm-bindgen = { version = "0.2", optional = true }
once_cell =  "1.21"


tokio = { version = "1.49.0", default-features = false, features = ["rt", "sync","time","macros"] }
tokio-tungstenite = { version = "0.28", features = ["__rustls-tls"] } 

rustls = { version = "0.23", default-features = false, features = ["ring"]  }
#["__rustls-tls"]
# rustls-platform-verifier = { version = "0.6.2", default-features = false }
tokio-rustls = { version = "0.26", default-features = false} 
arti-client = { version = "0.39.0", default-features = false, features = ["tokio", "rustls", "static-sqlite"]} 
tor-rtcompat = { version = "0.39", default-features = false, features = ["rustls"] }

tonic = { version = "0.14.2", default-features = false, features = ["transport"] }
tower =  { version = "0.5.3", default-features = false }


async-trait ={ version = "0.1", default-features = false}  
# may be features utils enough
futures = { version = "0.3", default-features = false} 

bytes = { version = "1.11.1", default-features = false }


hyper = { version = "1.8.1", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
http = { version = "1.4.0", default-features = false }
hyper-util = { version = "0.1.20", default-features = false }
webpki-roots = { version = "1.0.6", default-features = false }
libc = { version =  "0.2", default-features = false }
log = "0.4"
android_logger = "0.13"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
serde_cbor = "0.11"


[features]
default = ["native","wasm"]
native = []
wasm = ["wasm-bindgen"]

[profile.release]
debug = false
opt-level = "z"        # optimize for size
lto = true             # link-time optimization
codegen-units = 1      # improve inlining
panic = "abort"        # no unwinding tables
strip = true           # remove symbols
