[package]
name = "net_sdk"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
url = { version = "2.5.8", default-features = false }
once_cell = "1.21"
bytes = { version = "1.11", default-features = false }
async-trait = { version = "0.1", default-features = false }
futures = { version = "0.3", default-features = false }
serde_json = "1.0"
log = { version = "0.4", features = ["max_level_trace"] }
http-body-util = { version = "0.1.3", default-features = false }
http = { version = "1.4", default-features = false }
# --------------------------
# Native-only dependencies
# --------------------------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

tokio = { version = "1.49", default-features = false, features = ["rt","sync","time","macros","net"] }
tokio-tungstenite = { version = "0.28", features = ["__rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false }

arti-client = { version = "0.39", default-features = false, features = ["tokio","rustls","static-sqlite","onion-service-client"] }
tor-rtcompat = { version = "0.39", default-features = false, features = ["rustls"] }

tonic = { version = "0.14", default-features = false, features = ["transport"] }
tower = { version = "0.5", default-features = false }
hyper = { version = "1.8", default-features = false }
hyper-util = { version = "0.1.20", default-features = false }


webpki-roots = { version = "1.0.6", default-features = false }
libc = { version = "0.2", default-features = false }
android_logger = "0.13"

# --------------------------
# WASM-only dependencies
# --------------------------
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.49", default-features = false, features = ["rt","sync","time","macros"] }
ws_stream_wasm = "0.7.5"
wasm-bindgen = "0.2"
reqwest = { version = "0.13.2", default-features = false }
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
wasm-bindgen-futures = "0.4"
tonic-web-wasm-client = "0.8"
gloo-timers = "0.3.0"
parking_lot = { version ="0.12.5", default-features = false } 
web-sys = { version = "0.3", default-features = false }
js-sys = "0.3"
gloo = { version = "0.11", features = ["futures"] }

# --------------------------
# Profiles
# --------------------------
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
